Revision history for Perl extension Catalyst::Plugin::Authentication

      - Note about how a realms key used to be needed to unconfuse people
        running an old version, but browsing the docs on search.cpan (ruoso)

0.10011 Sun Mar  8 23:32:12 GMT 2009
      - Update t/live_app_session.t to skip unless you have a newer, more
        reliable version of TWMC (RT#43817)
      - Change check for isa Catalyst::Plugin::Session to just check the
        existance of a session method. (Edmund von der Burg)

0.10010
      - Change from NEXT to MRO::Compat
      - Chop a number off the versions to get back to the correct 0.10000
        version scheme.

0.100092_01
      - Add hook for failing user restore.
        - Add test for this.
      - Fix bug in Credential::Password with password_type: clear.
        - Add test for this.
      - Add mock object tests for Credential::Password with password_type: 
        clear.

0.100092
      - Release new version, no changes since dev release.     

0.10009_01
      - Fix POD escaping, from RT#38694 (Luke Ross)
      - Change authentication backwards compatibility handling to not rely on
        Class::Data::Inheritable side effects, and so be Catalyst 5.80 safe 
        (t0m)

0.10009 2008-11-27
        - Including progressive realm for multiple authentication attempts
          in a single request.

0.10008 2008-10-23
		- Updating config to allow for inclusion of realm ref's in the main
		  config hash rather than in a subref called 'realms'

0.10007 2008-08-17
	- Update tests prereqs to include Test::Exception (RT #36339)
        - Some documentation fixes (including RT #36062)
        - Compatibility fix where the use of new style config and old
          style Authentication::Store::Minimal would cause a crash 
          (Reported & fixed by Jos Boumans C<kane@cpan.org>)
        - Documentation update on Password - to indicate proper field naming
        - Decouple Authentication system from session.  The realm class